--- a/order-summary-component-main/public/index.html
+++ b/order-summary-component-main/public/index.html
@@ -35,7 +35,7 @@
       </p>
       <section class="plan">
         <img src="images/icon-music.svg" />
-        <h5>Annual Plan</h5>
+        <h4>Annual Plan</h4>
         <p>$59.99/year</p>
         <a href="#">Change</a>
       </section>
@@ -46,7 +46,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/leodsc/">Leonardo Carvalho</a>.
     </div>
   </body>
 </html>
