--- a/faq-accordion-card-main/public/index.html
+++ b/faq-accordion-card-main/public/index.html
@@ -28,20 +28,35 @@
   </head>
   <body>
     <main>
+      <img class="box" src="images/illustration-box-desktop.svg" alt="box" />
       <section class="faq-ctn">
-        <div class="illustration-shadow"></div>
+        <img
+          class="pattern"
+          width="800"
+          height="800"
+          src="images/bg-pattern-desktop.svg"
+          alt="pattern background"
+        />
         <img
           class="illustration-mobile"
           src="images/illustration-woman-online-mobile.svg"
           alt="illustration-mobile"
         />
         <img
-          class="illustration-desktop"
-          src="images/illustration-woman-online-desktop.svg"
-          alt="illustration desktop"
+          width="320"
+          class="pattern-mobile"
+          src="images/bg-pattern-mobile.svg"
+          alt="pattern"
         />
-        <h2>FAQ</h2>
+        <div class="illustration-desktop-ctn">
+          <img
+            class="illustration-desktop"
+            src="images/illustration-woman-online-desktop.svg"
+            alt="illustration desktop"
+          />
+        </div>
         <div class="questions-ctn">
+          <h2>FAQ</h2>
           <div class="question">
             <p>How many team members can I invite?</p>
             <img src="images/icon-arrow-down.svg" alt="icon down" />
