--- a/article-preview-component-master/public/index.html
+++ b/article-preview-component-master/public/index.html
@@ -59,5 +59,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/leodsc">Leonardo Carvalho</a>.
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
